# COOP

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  COOP.sln  Design List.docx  LICENSE  README.md  The COOP Cheat Sheet.docx  bench_list.c  bench_list_ops.c  coop.sln  suppressions.txt  ~$e COOP Cheat Sheet.docx  ~$sign List.docx
.github/: CODEOWNERS
COOP/: BinaryTree.c  BinaryTree.h  CMakeLists.txt  COOP.h  COOP.vcxproj  COOP.vcxproj.filters  Cache.c  Cache.h  ClassDefMacros.h  DynamicMemoryManagement.c  DynamicMemoryManagement.h  ExportDefs.h  GenericTensor.c  GenericTensor.h  HashTable.c  HashTable.h  HeapCache.c  HeapCache.h  IHashable.h  InMemoryCache.c  InMemoryCache.h  InheritenceDefMacros.h  Iterator.c  Iterator.h  Iterator.pp.c  List.c  List.h  MISRA_Deviations.xlsx  MathUtils.h  MemoryManager.cpp  MemoryManager.h  Ndarray.c  Ndarray.h  ObjectBaseStructs.h  ObjectLifecycleManagement.c  ObjectLifecycleManagement.h  Queue.c  Queue.h  RedBlackTree.c  RedBlackTree.h  (+47 more)
COOP/Compare/OOC/: Queue_ooc.c  main_ooc.c  ooc_bench.c
COOP_C_TestProxy/: BaseClassExample.c  BaseClassExample.h  CMakeLists.txt  COOP_C_TestProxy.vcxproj  COOP_C_TestProxy.vcxproj.filters  CacheTest.h  CharTest.c  CharTest.h  ClassTest.c  ClassTest.h  ClassUnitTest.c  ClassUnitTest.h  DerivedClassExample.c  DerivedClassExample.h  ExeptionTest.c  ExeptionUnitTest.c  ExeptionUnitTest.h  InheritTest.c  InheritTest.h  Mat.c  Mat4Test.c  MemManagementUnitTest.c  MemManagementUnitTest.h  ProxyExportDefs.h  Rectangle.c  Rectangle.h  ScopeTest.c  ScopeTester.c  ScopeTester.h  ScopesUnitTest.c  ScopesUnitTest.h  SuperMat.c  SuperMat.h  TypeTest.c  TypeTest.h  rbTreeIterUnitTest.c  rbTreeIterUnitTest.h  rbTreeUnitTest.c  rbTreeUnitTest.h  vectorIteratorUnitTest.c  (+3 more)
CV/: README.md
CV/CV/: BorderProcessor.c  BorderProcessor.h  CMakeLists.txt  ImageProcessor.c  NMSProcessor.c  NMSProcessor.h  SobelProcessor.c  SobelProcessor.h  ThresholdProcessor.c
CV/UnitTest/: CMakeLists.txt  GrayImageUnitTest.c
Cache_UnitTest/: CacheNoNames_UnitTest.cpp  Cache_UnitTest.cpp  Cache_UnitTest.vcxproj  InMemoryCacheTest.cpp  LibLoadUtils.h  Object_UnitTest.cpp
Catch2UnitTests/: CMakeLists.txt  Catch2UnitTests.vcxproj  Catch2UnitTests.vcxproj.filters  ClassCatch2Test.cpp  ExeptionCatch2Test.cpp  InMemoryCacheCatch2Test.cpp  InheritCatch2Test.cpp  catch.hpp  rbTreeIteratorCatch2Test.cpp  redBlackTreeCatch2Test.cpp
Compare/: COMPARATION-COOP.xlsx  README.md
Compare/OOC/: Queue_ooc.c  Queue_ooc.h
Compare/PureCDemo/: bt_pure.c  bt_pure.h  main.c
Compare/Pure_C/: bt_pure.c  bt_pure.h
Compare/benchmarks/coop/: CMakeLists.txt  bench_list_ops.c  coop_bench_binary_tree.c  coop_bench_queue.c
Compare/benchmarks/gObject/: bench_gqueue_ops.c
Compare/benchmarks/ooc/: ooc_bench_queue.c
Compare/benchmarks/pure_c/: pure_c_bench_binary_tree.c
InerheritTest/: InerheritTest.vcxproj  test.cpp
Inherit-DLL/: Inherit-DLL.vcxproj
Inherit-Test/: Inherit-Test.vcxproj  test.cpp
Inherit-Test/x64/Debug/: Inherit-Test.pch.REMOVED.git-id
Malky/Binary_tree/: Source.cpp  binary_tree.c  coop.h  coop.sln  coop.vcxproj  coop.vcxproj.filters
Malky/coop-test/: coop-test.vcxproj  test.cpp
Object_unitTest/: CacheClassTest.cpp  CacheTest.cpp  ExeptionTest.cpp  InMemoryCacheTest.cpp  InheritTest.cpp  Object_UnitTest.cpp  Object_unitTest.vcxproj  pch.h
OpenCV/: README.md
OpenCV/OpenCV/: BorderProcessor.c  CMakeLists.txt  Functions.c  Functions.h  GaussianProcessor.c  GaussianProcessor.h  GrayImage.c  GrayImage.h  ImageProcessor.h  SobelProcessor.c  ThresholdProcessor.h
OpenCV/UnitTest/: CMakeLists.txt  GrayImageUnitTest.c  GrayImageUnitTest.h  _RUNNER_.c
UnitTestC/: BaseClassExample.c  BaseClassExample.h  BinaryTreeUnitTest.c  BinaryTreeUnitTest.h  CMakeLists.txt  CharTest.c  CharTest.h  ClassTest.c  ClassTest.h  ClassTestC.c  ClassTestC.h  ClassUnitTest.c  ClassUnitTest.h  CodeBlocksUnitTest.c  CodeBlocksUnitTest.h  DemoClassTest.c  DemoClassTest.h  DerivedClassExample.c  DerivedClassExample.h  ExeptionUnitTest.c  ExeptionUnitTest.h  HashTableUnitTest.c  HashTableUnitTest.h  InheritTest.c  InheritTest.h  InheritanceTest.c  InheritanceTest.h  IteratorUnitTest.c  IteratorUnitTest.h  MemManagementUnitTest.c  MemManagementUnitTest.h  MyTest.c  NdarrayTest.c  NdarrayTest.h  QueueUnitTest.c  QueueUnitTest.h  Rectangle.c  Rectangle.h  RedBlackTreeIterUnitTest.c  RedBlackTreeIterUnitTest.h  (+33 more)
UnitTestC/x64/Release/: UnitTestC.exe.recipe  UnitTestC.iobj  UnitTestC.ipdb
UnitTestC/x64/Release/UnitTestC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTestC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UnitTests/: CacheTest.cpp  Class_UnitTest.cpp  ExeptionTest.cpp  InMemoryCacheTest.cpp  InheritTest.cpp  Object_UnitTest.cpp  Scopes_UnitTest.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.h  rbTreeIterUnitTest.cpp  rbTreeUnitTest.cpp  vectorIteratorUnitTest.cpp  vectorUnitTest.cpp
UnitTestsC/: ClassTest.c  ClassTest.h  ExeptionUnitTest.c  ExeptionUnitTest.h  UnitTestsC.vcxproj  UnitTestsC.vcxproj.filters  test_defs.h
coop/: coop.vcxproj  coop.vcxproj.filters  memoryManagement.c  memoryManagement.h
coop-test/: LibLoadUtils.h  coop-test.vcxproj  test.cpp
coop-test1/: coop-test1.vcxproj  test.cpp
michalSandbox/: Counter.c  Counter.h  header.h  main.c  michalSandbox.vcxproj  michalSandbox.vcxproj.filters
object/: A.h  B.c  B.h  COOP.h  COOP.vcxproj.filters  Cache.c  Cache.h  CacheClass.c  CacheClass.h  CacheTest.c  CacheTest.h  Exeption.c  Exeption.h  ExeptionTest.c  ExeptionTest.h  ExportDefs.h  Globals.c  Globals.h  HeapCache.c  HeapCache.h  InMemoryCache.c  InMemoryCache.h  Inherit.h  InheritTest.c  InheritTest.h  LinkedLists.c  LinkedLists.h  Mat.c  Mat.h  Mat4Test.c  Mat4Test.h  ObjectTest.c  ObjectTest.h  ScopeTest.c  SuperMat.c  SuperMat.h  SuperMat3_4Test.c  SuperMat3_4Test.h  SuperMat4Test.c  SuperMat4Test.h  (+16 more)
object-unitTest/: Cache_UnitTest.cpp  Inhertiance_UnitTest.cpp  Object_UnitTest.cpp  object-unitTest.vcxproj
orgenized COOP/COOP/: COOP.sln
(+34 files in other folders)
